--- a/codex.html
+++ b/codex.html
@@ -20,7 +20,7 @@
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="ragnarok.html">God of War Ragnarök</a>
-                    <a href="games.html">Games</a>
+                    <a href="codex.html">Códex</a>
                     <a href="">Nórdica</a>
                     <a href="">Grega</a>
                 </nav>
