--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="ragnarok.html">God of War Ragnarök</a>
-                    <a href="games.html">Games</a>
+                    <a href="codex.html">Códex</a>
                     <a href="">Nórdica</a>
                     <a href="">Grega</a>
                 </nav>
@@ -96,10 +96,11 @@
             </figure>
         </main>
 
-        <section><div class="table-information">
-            <nav class="nav-table">
-                <h2>Jogo Mais Recente</h2>
-                <table class="table-lateral" summary="Tabela com informações resumidas sobre o jogo">
+        <section>
+            <div class="table-information">
+                <nav class="nav-table">
+                    <h2>Jogo Mais Recente</h2>
+                    <table class="table-lateral" summary="Tabela com informações resumidas sobre o jogo">
                     <tr class="row-table">
                         <th colspan="2">God of War Ragnarök</th>
                     </tr>
@@ -139,10 +140,11 @@
                         <td>Lançamento Anterior</td>
                         <td>God of War (2018)</td>
                     </tr>
-                </table>
-            </nav>
-        </div>
-    </div></section>
+                    </table>
+                </nav>
+            </div>
+        </section>
+    </div>
 
     <footer>
         <div class="footer">
