--- a/ragnarok.html
+++ b/ragnarok.html
@@ -20,7 +20,7 @@
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="ragnarok.html">God of War Ragnarök</a>
-                    <a href="games.html">Games</a>
+                    <a href="codex.html">Códex</a>
                     <a href="">Nórdica</a>
                     <a href="">Grega</a>
                 </nav>
@@ -357,7 +357,47 @@
                             <p>Wulver</p>
                         </li>
                     </ul>
+                    <ul>
+                        <li><img class="char" src="assets/images/dreki.jpg">
+                            <p>Dreki</p>
+                        </li>
+                        <li><img class="char" src="assets/images/grim.jpg">
+                            <p>Grim</p>
+                        </li>
+                        <li><img class="char" src="assets/images/bergsra.jpg">
+                            <p>Bergsra</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li><img class="char" src="assets/images/tatzelwurm.jpg">
+                            <p>Tatzelwurm</p>
+                        </li>
+                        <li><img class="char" src="assets/images/gradungr.jpg">
+                            <p>Gradungr</p>
+                        </li>
+                        <li><img class="char" src="assets/images/gulon.jpg">
+                            <p>Gulon</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li><img class="char" src="assets/images/garm.jpg">
+                            <p>Garm</p>
+                        </li>
+                        <li><img class="char" src="assets/images/níðhögg.jpg">
+                            <p>Níðhögg</p>
+                        </li>
+                        <li><img class="char" src="assets/images/trolls.jpg">
+                            <p>Trolls</p>
+                        </li>
+                    </ul>
                 </div>
+
+            <div class="contents">
+                <a href="#Weapons" id="Weapons"><h2>Armas</h2></a>
+            </div>
+            <hr>
+
+            
         </main>
 
         <section>
