--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlayPédia | Página Principal</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/icon.png">
@@ -10,43 +9,43 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 </head>
 <body>
-    <!-- Header / Cabeçalho -->
-    <header class="header">
+    <!--------------------------------------------------------------------- HEADER --------------------------------------------------------------------->
+    <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html"><img src="assets/images/logo.png"></a>
+                <a href="index.html"><img src="assets/images/logo.png" alt="Logo do Site"></a>
             </div>
             <div class="menu">
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="ragnarok.html">God of War Ragnarök</a>
                     <a href="codex.html">Códex</a>
-                    <a href="">Nórdica</a>
-                    <a href="">Grega</a>
+                    <a href="nordica.html">Nórdica</a>
+                    <a href="grega.html">Grega</a>
                 </nav>
             </div>
-            <div class="social">
-                <button><a href="#"></a><i class="uil uil-instagram"></i></button>
-                <button><a href="#"></a><i class="uil uil-github-alt"></i></button>
-                <button><a href="#"></a><i class="uil uil-linkedin-alt"></i></button>
-                <button><a href="#"></a><i class="uil uil-youtube"></i></button>
+            <div class="social-media">
+                <a target="_blank" href="https://www.instagram.com/nevergiveup_man0/" class="social-link" id="instagram"><i class="uil uil-instagram"></i></a>
+                <a target="_blank" href="https://github.com/JackCoder0" class="social-link" id="github"><i class="uil uil-github-alt"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/jackson-silva-coder/" class="social-link" id="linkedin"><i class="uil uil-linkedin-alt"></i></a>
+                <a target="_blank" href="https://www.youtube.com" class="social-link" id="youtube"><i class="uil uil-youtube"></i></a>
             </div>
         </div>
     </header>
-    <!-- Barra de Pesquisa / Search Bar -->
+    <!------------------------------------------------------------------- SEARCH BAR ------------------------------------------------------------------->
     <div class="bar">
         <div class="search-bar">
-            <form class="search" method="get" action="#">
-                <input placeholder="Procure algo sobre God Of War..." type="text">
-                <button id="button" type="submit">Buscar</button>
+            <form class="search" action="#" method="get" >
+                <input placeholder="Procure algo sobre God of War" type="text">
+                <button type="submit">Buscar</button>
             </form>
         </div>
     </div>
-    <!-- Barra Lateral / Side Bar -->
+    <!-------------------------------------------------------------------- LEFT MENU -------------------------------------------------------------------->
     <div class="content">
-        <nav class="sidebar">
+        <nav class="side-bar">
             <div class="toc">
-                <input type="text" class="toctogglecheckbox">
+                <input type="text" class="toctoggle">
                 <div class="toctitle" style="min-width: 223px;">
                     <h2>
                         <i class="uil uil-list-ul"></i>
@@ -55,57 +54,57 @@
                 </div>
                 <ul>
                     <li><a href="#Plot"><span>1.</span><span>Plot</span></a>
-                    <ul>
-                    <li><a href="#Main_Story"><span>1.1.</span><span>História Principal</span></a></li>
-                    <li><a href="#Epilogue"><span>1.2.</span><span>Epílogo</span></a></li>
-                    </ul>
+                        <ul>
+                            <li><a href="#Main_Story"><span>1.1.</span><span>História Principal</span></a></li>
+                            <li><a href="#Epilogue"><span>1.2.</span><span>Epílogo</span></a></li>
+                        </ul>
                     </li>
                     <li><a href="#Characters"><span>2.</span><span>Personagens</span></a>
-                    <ul>
-                    <li><a href="#Main_Protagonists"><span>2.1.</span><span>Protagonistas</span></a></li>
-                    <li><a href="#Secondary_Characters"><span>2.2.</span><span>Secundários</span></a></li>
-                    <li><a href="#Antagonists"><span>2.3.</span><span>Antagonistas</span></a></li>
-                    </ul>
+                        <ul>
+                            <li><a href="#Main_Protagonists"><span>2.1.</span><span>Protagonistas</span></a></li>
+                            <li><a href="#Secondary_Characters"><span>2.2.</span><span>Secundários</span></a></li>
+                            <li><a href="#Antagonists"><span>2.3.</span><span>Antagonistas</span></a></li>
+                        </ul>
                     </li>
-                    <li><a href="#Enemies"><span>3.</span><span>Enimigos</span></a></li>
+                    <li><a href="#Enemies"><span>3.</span><span>Inimigos</span></a></li>
                     <li><a href="#Weapons"><span>4.</span><span>Armas</span></a></li>
                     <li><a href="#Gameplay"><span>5.</span><span>Gameplay</span></a></li>
                     <li><a href="#Development"><span>6.</span><span>Desenvolvimento</span></a></li>
                     <li><a href="#Cast"><span>7.</span><span>Elenco</span></a>
-                    <ul>
-                    <li><a href="#Principal_voice_actors"><span>7.1.</span><span>Principais Dubladores</span></a></li>
-                    <li><a href="#Additional_voices"><span>7.2.</span><span>Vozes Adicionais</span></a></li>
-                    </ul>
+                        <ul>
+                            <li><a href="#Principal_voice_actors"><span>7.1.</span><span>Principais Dubladores</span></a></li>
+                            <li><a href="#Additional_voices"><span>7.2.</span><span>Vozes Adicionais</span></a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
         </nav>
-
+    <!-------------------------------------------------------------------- CONTENT -------------------------------------------------------------------->
         <main>
-            <div class="main"> 
+            <div class="main">
                 <article>
                     <h1>God Of War</h1>
                     <p><b><i>God of War</i></b> é uma série de jogos eletrônicos de ação-aventura criada por David Jaffe da Santa Monica Studio, da Sony. Iniciada em 2005 no console PlayStation 2 (PS2), tornou-se carro-chefe para a marca PlayStation, consistindo em nove jogos em várias plataformas. Baseada em distintas mitologias, a história segue Kratos, um guerreiro espartano que foi levado a matar sua família por seu antigo mestre, o deus da guerra Ares. Isso desencadeia uma série de eventos que levam à guerras com os panteões mitológicos. A era da mitologia grega da série mostra Kratos seguindo um caminho de vingança devido às maquinações dos deuses do Olimpo, enquanto a era da mitologia nórdica, que apresenta seu filho Atreus como protagonista secundário, mostra um Kratos mais velho em um caminho de redenção, o que inadvertidamente coloca os dois em conflito com os deuses nórdicos e em busca do impedimento do Ragnarök.</p>
                     <p>A Santa Monica desenvolveu todos os títulos principais, enquanto a Ready at Dawn e Javaground/Sony Online Entertainment-Los Angeles (SOE-LA) desenvolveram os três jogos paralelos. A Sony Interactive Entertainment (SIE) publicou todos os jogos, exceto o título de telefone celular, que foi publicado pela Sony Pictures Digital. Os primeiros sete jogos constituem a era grega da franquia. <b><i>God of War</i></b> (2005), <b><i>God of War II</i></b> (2007) e <b><i>God of War III</i></b> (2010) compõem sua trilogia principal; os dois primeiros foram lançados no PS2 e o terceiro no PlayStation 3 (PS3). Uma pré-sequência, <b><i>Ascension</i></b> (2013), também foi lançada para PS3. Outros jogos incluem <b><i>Chains of Olympus</i></b> (2008) e <b><i>Ghost of Sparta</i></b> (2010) para PlayStation Portable (PSP), e <b><i>Betrayal</i></b> (2007) para telefones celulares que suportam a plataforma Java, Micro Edition (Java ME). A era nórdica começou com o título de 2018, também intitulado <b><i>God of War</i></b> e lançado inicialmente para PlayStation 4 (PS4). Foi acompanhado por uma pequena pré-sequência, <b><i>A Call from the Wilds</i></b> (2018), um jogo baseado em texto através do Facebook Messenger. Uma sequência, <b><i>Ragnarök</i></b>, foi lançada em 2022 para PS4 e PlayStation 5 (PS5), concluindo a era nórdica.</p>
                     <p>Os títulos da série foram aclamados como alguns dos melhores jogos de todos os tempos. A franquia recebeu diversos prêmios, incluindo vários reconhecimentos de Jogo do Ano para os títulos de 2005 e 2018. Alguns jogos também foram remasterizados para plataformas mais recentes da PlayStation. Até novembro de 2020, a franquia vendeu mais de 51 milhões de unidades em todo o mundo. As fortes vendas e o suporte da série levaram à expansão da franquia para outras mídias, como três séries de quadrinhos e três romances. Uma adaptação cinematográfica do título original estava em desenvolvimento, mas acabou sendo cancelada. Dentre as mercadorias, incluem artes, roupas, brinquedos e réplicas de adereços, bem como trilhas sonoras de jogos, incluindo um álbum de heavy metal, intitulado Blood & Metal (2010), que apresenta músicas originais de várias bandas inspiradas na franquia.</p>
                 </article>
+                <figure>
+                    <img src="assets/images/cover.jpg" alt="" width="80%">
+                    <figcaption>Imagem da capa do jogo <b>God of War Ragnarök</b></figcaption>
+                </figure>
             </div>
-            <figure>
-                <img src="assets/images/cover.jpg" alt="" width="90%">
-                <figcaption>Imagem da capa do jogo <b>God of War Ragnarök</b></figcaption>
-            </figure>
         </main>
-
-        <section>
-            <div class="table-information">
-                <nav class="nav-table">
-                    <h2>Jogo Mais Recente</h2>
-                    <table class="table-lateral" summary="Tabela com informações resumidas sobre o jogo">
+    <!-------------------------------------------------------------------- INFO TABLE -------------------------------------------------------------------->
+    <section>
+        <div class="table-info">
+            <nav class="nav-table">
+                <h2>Jogo Mais Recente</h2>
+                <table class="table-lateral" summary="Tabela com informações resumidas sobre o game.">
                     <tr class="row-table">
                         <th colspan="2">God of War Ragnarök</th>
                     </tr>
                     <tr>
-                        <td colspan="2"><img src="assets/images/God_of_war_Ragnarok.png" width="230"></td>
+                        <td colspan="2"><img src="assets/images/God_of_war_Ragnarok.png" width="200"></td>
                     </tr>
                     <tr>
                         <th>Desenvolvedora</th>
@@ -140,31 +139,33 @@
                         <td>Lançamento Anterior</td>
                         <td>God of War (2018)</td>
                     </tr>
-                    </table>
-                </nav>
-            </div>
-        </section>
-    </div>
+                </table>
+            </nav>
+        </div>
+    </section>
+</div>
 
+    <!-------------------------------------------------------------------- FOOTER -------------------------------------------------------------------->
     <footer>
         <div class="footer">
             <h1>
-                <div class="logo">
-                    <a href="index.html"><img src="assets/images/logo.png"></a>
+                <div class="logo-footer">
+                    <a href="index.html"><img src="assets/images/icon.png"></a>
                 </div>
             </h1>
-            <p>PlayPédia, o seu guia definitivo para o mundo dos jogos!</p>
+            <p>PlayPédia, o seu guia definitivo para o mundo dos games!</p>
             <div id="footer-copyright">
-                &#169
-                2023 all rights reserved
+                <p>&#169 2023 all rights reserved</p>
+                <p>@jackson-silva</p>
             </div>
-                <div class="social-footer">
-                    <button><a href="#"></a><i class="uil uil-instagram"></i></button>
-                    <button><a href="#"></a><i class="uil uil-github-alt"></i></button>
-                    <button><a href="#"></a><i class="uil uil-linkedin-alt"></i></button>
-                    <button><a href="#"></a><i class="uil uil-youtube"></i></button>
-                </div>
+            <div class="footer-social-media">
+                <a target="_blank" href="https://www.instagram.com/nevergiveup_man0/" class="social-link" id="instagram"><i class="uil uil-instagram"></i></a>
+                <a target="_blank" href="https://github.com/JackCoder0" class="social-link" id="github"><i class="uil uil-github-alt"></i></a>
+                <a target="_blank" href="https://www.linkedin.com/in/jackson-silva-coder/" class="social-link" id="linkedin"><i class="uil uil-linkedin-alt"></i></a>
+                <a target="_blank" href="https://www.youtube.com" class="social-link" id="youtube"><i class="uil uil-youtube"></i></a>
+            </div>
         </div>
     </footer>
+
 </body>
 </html>
