--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@
             </h1>
             <p>PlayPédia, o seu guia definitivo para o mundo dos games!</p>
             <div id="footer-copyright">
-                <p>&#169 2023 all rights reserved</p>
-                <p>@jackson-silva</p>
+                <p>©2023 Copyright - @jackson-silva</p>
             </div>
             <div class="footer-social-media">
                 <a target="_blank" href="https://www.instagram.com/nevergiveup_man0/" class="social-link"
